# Phoenix

./: .gitignore  CMakeLists.txt
Phoenix/Client/Include/Client/Graphics/: Window.hpp
Phoenix/Client/Include/Client/Graphics/GUI/: CMakeLists.txt  ImSuperButton.hpp
Phoenix/Client/Include/Client/Voxels/: BlockRegistry.hpp
Phoenix/Client/Source/: Client.cpp  EscapeMenu.cpp  Game.cpp  InventoryUI.cpp
Phoenix/Client/Source/Graphics/: Camera.cpp  Window.cpp
Phoenix/Client/Source/Graphics/GUI/: CMakeLists.txt  ImSuperButton.cpp
Phoenix/Common/Include/Common/: Settings.hpp
Phoenix/Common/Include/Common/CMS/: ModManager.inl
Phoenix/Common/Source/: Commander.cpp  Settings.cpp
Phoenix/Common/Source/Voxels/: Chunk.cpp
docs/Rose's Rewrite Thoughts/: pregame-ui.md  target-flow.drawio
res/: CMakeLists.txt
res/Mods/: CMakeLists.txt
res/Mods/chests/: Init.lua
src/: core-intrinsics.hpp  datastore.cpp  graphics.inl  logger.cpp  main.cpp  util.hpp
